# tinyserve

./: .gitignore  Cargo.toml  README.md  tinyserve.py
src/: main.rs
