[package]
name = "tinyserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"

# [dev-dependencies]
axum-macros = "0.3.7"